--- a/src/app/room/room.component.less
+++ b/src/app/room/room.component.less
@@ -5,6 +5,10 @@
     z-index: 1;
 }
 
+.user{
+    width: 50px; height: 50px;color:white;background-color: transparent;
+}
+
 .container::before {
     content: ''; 
     position: absolute;
@@ -28,7 +32,7 @@
     height: 100vh;
     padding: 20px;
     box-sizing: border-box;
-    z-index: 9999 !important;
+    z-index: 2 !important;
 }
   
   .p-grid {
@@ -37,7 +41,7 @@
     align-items: stretch; 
     width: 100%;
     max-width: 1600px;
-    z-index: 9999 !important;
+    z-index: 2 !important;
   }
   
   .p-col-6 {
@@ -59,7 +63,8 @@
 }
 
 
-p-button{
+p-button, button{
+    margin-top: 2vh;
     margin-right: 2vh;
 }
 
